# PLMBot

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: cli.py  config.py
app/agent/: callbacks.py  prompt.py  runner.py  schemas.py
app/db/: models.py
app/seed/: seed_runner.py
app/services/: bom_service.py  component_service.py  retrieval_service.py
app/tools/: bom_tools.py  component_tools.py  schemas.py
docs/: PLMBot Requirements.md  deep-research-report.md
tests/: test_agent_runner.py  test_cli.py
